--- a/src/inner-moon/animation.scss
+++ b/src/inner-moon/animation.scss
@@ -2,6 +2,9 @@
 
 .#{$prefix}theme-toggle{
     ##{$prefix}inner-moon {
+        * {
+            will-change: transform;
+        }
         ##{$prefix}toggle-outer {
             transform-origin: center center;
             transition: transform 750ms cubic-bezier(0, 0, .15, 1.25);
