added new toggle

--- a/src/bundle.scss
+++ b/src/bundle.scss
@@ -4,3 +4,4 @@
 @import "./inner-moon/index.scss";
 @import "./classic/index.scss";
 @import "./lightbulb/index.scss";
+@import "./dark-side/index.scss";
