--- a/src/variables.scss
+++ b/src/variables.scss
@@ -4,3 +4,5 @@
 $darkSelector: ".dark";
 // Adds a prefix to every css class, eg 'themes-'
 $prefix: "";
+// Total duration of each animation in ms
+$duration: 750;
