--- a/src/classic/animation.scss
+++ b/src/classic/animation.scss
@@ -1,49 +1,65 @@
 @import "../variables.scss";
 
-.#{$prefix}theme-toggle {
-    ##{$prefix}classic {
+.theme-toggle,
+.theme-toggle--reversed {
+    .theme-toggle__classic {
+        --theme-toggle__classic--duration: #{$duration};
         * {
             transition-property: opacity, transform;
             transition-timing-function: cubic-bezier(0, 0, .15, 1.25);
-            transition-duration: 750ms;
-            transform-origin: center center;
-            transition-delay: 150ms;
-            will-change: transform, opacity;
+            transition-duration: var(--theme-toggle__classic--duration);
+            transform-origin: center;
+            transition-delay: calc(var(--theme-toggle__classic--duration)/5);
         }
-        ##{$prefix}cutout {
-            transition-delay: 0ms;
-            transform: none;
-            will-change: transform;
+        #theme-toggle__classic__cutout {
+            circle {
+                transition-delay: 0ms;
+                transform: none;
+            }
         }
-    }
-    &.#{$prefix}reversed {
-          ##{$prefix}classic ##{$prefix}cutout {
-              transform: translate(-28px);
-          }      
     }
 }
 
-#{$darkSelector} :not(label).#{$prefix}theme-toggle,
-#{$darkSelector}:not(label).#{$prefix}theme-toggle,
-.#{$prefix}theme-toggle input[type="checkbox"]:checked ~ {
-    ##{$prefix}classic {
-        ##{$prefix}sun_rays  * {
+.theme-toggle--reversed {
+    .theme-toggle__classic {
+        #theme-toggle__classic__cutout {
+            circle {
+                transform: translate(-28px);
+            } 
+        }
+    }
+}
+
+#{$darkSelector} :not(label).theme-toggle,
+#{$darkSelector}:not(label).theme-toggle,
+.theme-toggle input[type="checkbox"]:checked ~,
+#{$darkSelector} :not(label).theme-toggle--reversed,
+#{$darkSelector}:not(label).theme-toggle--reversed,
+.theme-toggle--reversed input[type="checkbox"]:checked ~ {
+    .theme-toggle__classic {
+        .theme-toggle__classic__sun-rays  * {
             transform: scale(0.5) rotate(45deg);
             opacity: 0;
             transition-delay: 0ms;
         }
-        ##{$prefix}cutout {
-            transform: translate(-7px, 10px);
-            transition-delay: 150ms;
+        #theme-toggle__classic__cutout {
+            circle {
+                transform: translate(-7px, 10px);
+                transition-delay: calc(var(--theme-toggle__classic--duration)/5);
+            }
         }
     }
 }
 
-#{$darkSelector} :not(label).#{$prefix}theme-toggle.#{$prefix}reversed,
-.#{$prefix}theme-toggle.#{$prefix}reversed input[type="checkbox"]:checked ~ {
-    ##{$prefix}classic {
-        ##{$prefix}cutout {
-            transform: translate(-21px, 10px);
+#{$darkSelector} :not(label).theme-toggle--reversed,
+#{$darkSelector}:not(label).theme-toggle--reversed,
+.theme-toggle--reversed input[type="checkbox"]:checked ~ {
+    .theme-toggle__classic {
+        #theme-toggle__classic__cutout {
+            circle {
+                transform: translate(-28px);
+            } 
         }
     }
 }
+
