--- a/src/dark-side/animation.scss
+++ b/src/dark-side/animation.scss
@@ -1,18 +1,41 @@
 @import "../variables.scss";
 
-.#{$prefix}theme-toggle{
-    ##{$prefix}dark-side path{
-        will-change: transform;
-        transform-origin: center center;
-        transition: transform 500ms cubic-bezier(0, 0, .15, 1);
+.theme-toggle,
+.theme-toggle--reversed {
+    .theme-toggle__dark-side {
+        --theme-toggle__dark-side--duration: #{$duration};
+        path {
+            transform-origin: center;
+            transition: transform var(--theme-toggle__dark-side--duration) cubic-bezier(0, 0, .15, 1);
+        }
+    }
+}
+
+.theme-toggle--reversed {
+    .theme-toggle__dark-side {
+        path {
+            transform: rotate(180deg);
+        }
     }
 }
 
 
-#{$darkSelector} :not(label).#{$prefix}theme-toggle,
-#{$darkSelector}:not(label).#{$prefix}theme-toggle,
-.#{$prefix}theme-toggle input[type="checkbox"]:checked ~ {
-    ##{$prefix}dark-side path {
-        transform: rotate(180deg);
-    }
+#{$darkSelector} :not(label).theme-toggle,
+#{$darkSelector}:not(label).theme-toggle,
+.theme-toggle input[type="checkbox"]:checked ~ {
+    .theme-toggle__dark-side {
+        path {
+            transform: rotate(180deg);
+        }
+    } 
+}
+
+#{$darkSelector} :not(label).theme-toggle--reversed,
+#{$darkSelector}:not(label).theme-toggle--reversed,
+.theme-toggle--reversed input[type="checkbox"]:checked ~ {
+    .theme-toggle__dark-side {
+        path {
+            transform: rotate(0deg);
+        }
+    } 
 }
