--- a/src/lightbulb/animation.scss
+++ b/src/lightbulb/animation.scss
@@ -1,22 +1,25 @@
 @import "../variables.scss";
 
-.#{$prefix}theme-toggle {
-    ##{$prefix}lightbulb {
-        ##{$prefix}rays *, ##{$prefix}coil {
+.theme-toggle {
+    .theme-toggle__lightbulb {
+        --theme-toggle__lightbulb--duration: #{$duration};
+        .theme-toggle__lightbulb__rays *, 
+        .theme-toggle__lightbulb__coil {
             stroke-dasharray: 1;
             stroke-dashoffset: 0;
             opacity: 1;  
             transition-property: stroke-dashoffset, opacity;
-            transition-duration: 500ms; 
+            transition-duration: var(--theme-toggle__lightbulb--duration); 
         }
     }
 }
 
-#{$darkSelector} :not(label).#{$prefix}theme-toggle,
-#{$darkSelector}:not(label).#{$prefix}theme-toggle,
-.#{$prefix}theme-toggle input[type="checkbox"]:checked ~ {
-    ##{$prefix}lightbulb {
-        ##{$prefix}rays *, ##{$prefix}coil {
+#{$darkSelector} :not(label).theme-toggle,
+#{$darkSelector}:not(label).theme-toggle,
+.theme-toggle input[type="checkbox"]:checked ~ {
+    .theme-toggle__lightbulb {
+        .theme-toggle__lightbulb__rays *, 
+        .theme-toggle__lightbulb__coil {
             stroke-dashoffset: 1;
             opacity: 0;
         }
