--- a/src/variables.scss
+++ b/src/variables.scss
@@ -1,6 +1,6 @@
 // Variables to configure the toggles
 
 // The selector used to change the toggle styles
-$darkSelector: ".dark";
+$darkSelector: ".theme-toggle--toggled";
 // Total duration of each animation
 $duration: 750ms;
