--- a/src/bundle.scss
+++ b/src/bundle.scss
@@ -1,5 +1,11 @@
+@import "./base/index.scss";
+
 // Our toggles
-@import "./inner-moon/index.scss";
-@import "./classic/index.scss";
-@import "./lightbulb/index.scss";
-@import "./dark-side/index.scss";
+@import "./inner-moon/default.scss";
+@import "./inner-moon/reversed.scss";
+@import "./classic/default.scss";
+@import "./classic/reversed.scss";
+@import "./lightbulb/default.scss";
+@import "./lightbulb/reversed.scss";
+@import "./dark-side/default.scss";
+@import "./dark-side/reversed.scss";
