--- a/src/dark-side/shared.scss
+++ b/src/dark-side/shared.scss
@@ -1,7 +1,6 @@
-%shared__theme-toggle__dark-side {
-        --theme-toggle__dark-side--duration: #{$duration};
-        path {
-            transform-origin: center;
-            transition: transform var(--theme-toggle__dark-side--duration) cubic-bezier(0, 0, .15, 1);
-        }
+@mixin mixin__theme-toggle__dark-side($variable) {
+    path {
+        transform-origin: center;
+        transition: transform var($variable) cubic-bezier(0, 0, .15, 1);
+    }
 }
