--- a/src/classic/default.scss
+++ b/src/classic/default.scss
@@ -2,8 +2,15 @@
 @import "../base/index.scss";
 @import "shared.scss";
 
+$variable: --theme-toggle__classic--duration;
+
+.theme-toggle {
+    #{$variable}: $duration;
+}
+
 .theme-toggle__classic {
-    @extend %shared__theme-toggle;
+    @include mixin__theme-toggle($variable);
+
     #theme-toggle__classic__cutout {
         circle {
             transition-delay: 0ms;
@@ -19,7 +26,7 @@
         #theme-toggle__classic__cutout {
             circle {
                 transform: translate(-7px, 10px);
-                transition-delay: calc(var(--theme-toggle__classic--duration)/5);
+                transition-delay: calc(var($variable)/5);
             }
         }
     }
