--- a/src/classic/shared.scss
+++ b/src/classic/shared.scss
@@ -1,13 +1,19 @@
 %shared__theme-toggle {
-        --theme-toggle__classic--duration: #{$duration};
         * {
             transition-property: opacity, transform;
             transition-timing-function: cubic-bezier(0, 0, .15, 1.25);
-            transition-duration: var(--theme-toggle__classic--duration);
             transform-origin: center;
-            transition-delay: calc(var(--theme-toggle__classic--duration)/5);
         }
 }
+
+@mixin mixin__theme-toggle($variable) {
+    @extend %shared__theme-toggle;
+    * {
+        transition-duration: var($variable);
+        transition-delay: calc(var($variable)/5);
+    }
+}
+
 
 %shared__theme-toggle__classic__sun-rays  {
     .theme-toggle__classic__sun-rays  * {
