--- a/src/dark-side/reversed.scss
+++ b/src/dark-side/reversed.scss
@@ -2,14 +2,21 @@
 @import "../base/index.scss";
 @import "shared.scss";
 
-.theme-toggle__dark-side--reversed {
-    @extend %shared__theme-toggle__dark-side;
+$variable: --theme-toggle__dark-side-reversed--duration;
+
+.theme-toggle {
+    #{$variable}: $duration;
+}
+
+
+.theme-toggle__dark-side-reversed {
+    @include mixin__theme-toggle__dark-side($variable);
 }
 
 
 #{$darkSelector}.theme-toggle:not(label),
 .theme-toggle input[type="checkbox"]:checked ~ {
-    .theme-toggle__dark-side--reversed {
+    .theme-toggle__dark-side-reversed {
         path {
             transform: rotate(-180deg);
         }
