--- a/src/inner-moon/reversed.scss
+++ b/src/inner-moon/reversed.scss
@@ -2,13 +2,19 @@
 @import "../base/index.scss";
 @import "shared.scss";
 
-.theme-toggle__inner-moon--reversed {
-    @extend %shared__theme-toggle__inner-moon;
+$variable: --theme-toggle__inner-moon-reversed--duration;
+
+.theme-toggle {
+    #{$variable}: $duration;
+}
+
+.theme-toggle__inner-moon-reversed {
+    @include mixin__theme-toggle__inner-moon($variable);
 }
 
 #{$darkSelector}:not(label).theme-toggle,
 .theme-toggle input[type="checkbox"]:checked ~ {
-    .theme-toggle__inner-moon--reversed {
+    .theme-toggle__inner-moon-reversed {
         .theme-toggle__inner-moon__toggle-outer {
             transform: rotate(-180deg);
         }
