--- a/src/lightbulb/shared.scss
+++ b/src/lightbulb/shared.scss
@@ -1,11 +1,17 @@
 %shared__theme-toggle__lightbulb {
-    --theme-toggle__lightbulb--duration: #{$duration};
     .theme-toggle__lightbulb__rays *, 
     .theme-toggle__lightbulb__coil {
         stroke-dasharray: 1;
         stroke-dashoffset: 0;
         opacity: 1;  
         transition-property: stroke-dashoffset, opacity;
-        transition-duration: var(--theme-toggle__lightbulb--duration); 
+    }
+}
+
+@mixin mixin__theme-toggle__lightbulb($variable) {
+    @extend %shared__theme-toggle__lightbulb;
+    .theme-toggle__lightbulb__rays *, 
+    .theme-toggle__lightbulb__coil {
+        transition-duration: var(#{$variable}); 
     }
 }
