--- a/src/variables.scss
+++ b/src/variables.scss
@@ -2,5 +2,7 @@
 
 // The selector used to change the toggle styles
 $darkSelector: ".theme-toggle--toggled";
+// The selector used to change the toggle styles
+$reverseSelector: ".theme-toggle--reversed";
 // Total duration of each animation
 $duration: 750ms;
