--- a/src/toggles/inner-moon.scss
+++ b/src/toggles/inner-moon.scss
@@ -1,15 +1,25 @@
 @import "../variables.scss";
-@import "../base/index.scss";
-@import "shared.scss";
+@import "../normalise.scss";
 
 $variable: --theme-toggle__inner-moon--duration;
 
 .theme-toggle {
     #{$variable}: $duration;
+    &#{$reverseSelector} {
+        .theme-toggle__inner-moon {
+            transform: scale(-1,1);
+        }
+    }
 }
 
 .theme-toggle__inner-moon {
-    @include mixin__theme-toggle__inner-moon($variable);
+    .theme-toggle__inner-moon__toggle-outer {
+        transform-origin: center;
+        transition: transform var(#{$variable}) cubic-bezier(0, 0, .15, 1.25);
+    }
+    .theme-toggle__inner-moon__toggle-inner {
+        transition: transform calc(var(#{$variable}) / 1.5) cubic-bezier(0.4, 0, 0.2, 1);
+    }
 }
 
 #{$darkSelector}:not(label).theme-toggle,
