--- a/src/toggles/horizon.scss
+++ b/src/toggles/horizon.scss
@@ -6,14 +6,17 @@ $variable: #{getVar(horizon)};
 @include generic(horizon, flip-x);
 
 .theme-toggle__horizon {
-    .theme-toggle__horizon__sun {
-        transition: transform var(#{$variable}) cubic-bezier(0, 0, .15, 1);
-
+    g {
+        path {
+            transition: transform var(#{$variable}) cubic-bezier(0, 0, .15, 1);
+        }
     }
 }
 
 @include toggledSelector(horizon) {
-    .theme-toggle__horizon__sun {
-        transform: translate3d(0, 50%, 0);
+    g {
+        path {
+            transform: translate3d(0, 50%, 0);
+        }
     }
 }
