--- a/src/toggles/classic.scss
+++ b/src/toggles/classic.scss
@@ -11,16 +11,17 @@ $variable: #{getVar(classic)};
         transform-origin: center;
         transition-duration: calc(var($variable)*0.8);
     }
-    #theme-toggle__classic__cutout {
-        path {
-            transition-property: d;
-        }
-    }
     g {
         path {
             transition-property: opacity, transform;
             transition-delay: calc(var($variable)*0.2);
         }
+    }
+}
+
+#theme-toggle__classic__cutout {
+    path {
+        transition-property: transform, d;
     }
 }
 
@@ -36,6 +37,18 @@ $variable: #{getVar(classic)};
         path {
             d: path("M-12 5h30a1 1 0 0 0 9 13v24h-39Z");
             transition-delay: calc(var($variable)*0.2);
+        }
+    }
+}
+
+// Translating the clip path causes issues in chromium browsers so we prefer to animate
+// the path data. When this isn't supported, we fallback to translation
+@supports not (d: path("")) {
+    @include toggledSelector(classic) {
+        #theme-toggle__classic__cutout {
+            path {
+                transform: translate3d(-12px, 10px, 0);
+            }
         }
     }
 }
