--- a/src/toggles/expand.scss
+++ b/src/toggles/expand.scss
@@ -12,30 +12,43 @@ $variable: #{getVar(expand)};
             transition: transform calc(var($variable)*0.65) cubic-bezier(0, 0, 0, 1.25) calc(var($variable)*0.35);
         }
     }
-    clipPath {
-        path {
-            transition: d calc(var($variable)*0.6) cubic-bezier(0, 0, 0.5, 1);
-        }
-    } 
 }
+
+#theme-toggle__expand__cutout {
+    path {
+        transition-property: transform, d;
+        transition-duration: calc(var($variable)*0.6);
+        transition-timing-function: cubic-bezier(0, 0, 0.5, 1);
+    }
+} 
 
 @include toggledSelector(expand) {
     g {
-        circle, path {
-            transition-delay: 0s;
-        }
         circle {
             transform: scale(1.4);
+            transition-delay: 0s;
         }
         path {
             transform: scale(0.75);
+            transition-delay: 0s;
         }
     }
-    clipPath {
+    #theme-toggle__expand__cutout {
         path {
             d: path("M-9 3h25a1 1 0 0017 13v30H0Z");
             transition-delay: calc(var($variable)*0.4);
             transition-timing-function: cubic-bezier(0, 0, 0, 1.25);
+        }
+    }
+}
+// Translating the clip path causes issues in chromium browsers so we prefer to animate
+// the path data. When this isn't supported, we fallback to translation
+@supports not (d: path("")) {
+    @include toggledSelector(expand) {
+        #theme-toggle__expand__cutout {
+            path {
+                transform: translate3d(-9px, 14px, 0);
+            }
         }
     }
 }
