--- a/src/toggles/expand.scss
+++ b/src/toggles/expand.scss
@@ -12,7 +12,7 @@ $variable: #{getVar(expand)};
             transition: transform calc(var($variable)*0.65) cubic-bezier(0, 0, 0, 1.25) calc(var($variable)*0.35);
         }
     }
-    clipPath {
+    :first-child {
         path {
             transition-property: transform, d;
             transition-duration: calc(var($variable)*0.6);
@@ -32,7 +32,7 @@ $variable: #{getVar(expand)};
             transition-delay: 0s;
         }
     }
-    clipPath {
+    :first-child {
         path {
             d: path("M-9 3h25a1 1 0 0017 13v30H0Z");
             transition-delay: calc(var($variable)*0.4);
@@ -44,7 +44,7 @@ $variable: #{getVar(expand)};
 // the path data. When this isn't supported, we fallback to translation
 @supports not (d: path("")) {
     @include toggledSelector(expand) {
-        clipPath {
+        :first-child {
             path {
                 transform: translate3d(-9px, 14px, 0);
             }
