--- a/src/toggles/simple.scss
+++ b/src/toggles/simple.scss
@@ -6,7 +6,7 @@ $variable: #{getVar(simple)};
 @include generic(simple, flip-y);
 
 .theme-toggle__simple {
-    clipPath {
+    :first-child {
         path {
             transition-property: transform, d;
             transition-duration: calc(var($variable));
@@ -16,7 +16,7 @@ $variable: #{getVar(simple)};
 }
 
 @include toggledSelector(simple) {
-    clipPath {
+    :first-child {
         path {
             d: path("M-18-1h55v37h-55zm32 12a1 1 0 0025 0 1 1 0 00-25 0");
         }
@@ -27,7 +27,7 @@ $variable: #{getVar(simple)};
 // the path data. When this isn't supported, we fallback to translation
 @supports not (d: path("")) {
     @include toggledSelector(simple) {
-        clipPath {
+        :first-child {
             path {
                 transform: translate3d(-19px,5px,0);
             }
