--- a/test/preview/styles.css
+++ b/test/preview/styles.css
@@ -11,10 +11,9 @@ body.dark {
     background-color: rgb(13, 17, 23);
 }
 
-
 main {
     display: grid;
-    grid-template-columns: auto auto auto auto auto;
+    grid-template-columns: auto auto auto auto;
     gap: 2rem;
     padding: 2rem;
     max-width: 1920px;
@@ -41,21 +40,27 @@ main > :nth-child(4) {
     color: #f7b9b9;
 }
 main > :nth-child(5) {
-    color: #008ECC;
+    color: #71eeee;
 }
 main > :nth-child(6) {
-    color: #bcdb9c;
+    color: #008ECC;
 }
 main > :nth-child(7) {
-    color: #faf3b1;
+    color: #bcdb9c;
 }
 main > :nth-child(8) {
-    color: #65d1c6;
+    color: #faf3b1;
 }
 main > :nth-child(9) {
-    color: #bcabe0;
+    color: #65d1c6;
 }
 main > :nth-child(10) {
+    color: #bcabe0;
+}
+main > :nth-child(11) {
+    color: #db9cb6;
+}
+main > :nth-child(12) {
     color: #a4e0af;
 }
   
