Added support for reduced motion
We remove the animation when the user requests reduced motion

--- a/src/base.scss
+++ b/src/base.scss
@@ -17,3 +17,11 @@
 		border-width: 0;
 	}
 }
+
+@media (prefers-reduced-motion: reduce) {
+	.theme-toggle {
+		* {
+			transition: none !important;
+		}
+	}
+}
