Added core package

--- a/packages/core/src/variables.scss
+++ b/packages/core/src/variables.scss
@@ -13,4 +13,4 @@ $duration: 500ms;
 // Change which elements we generate styles for
 $button: true !default;
 $div: true !default;
-$checkbox: true !default;
+$checkbox: false !default;
