Added story generates and created remaining stories

--- a/packages/core/templates/story/{{dashCase name}}.stories.ts.hbs
+++ b/packages/core/templates/story/{{dashCase name}}.stories.ts.hbs
@@ -1,11 +1,11 @@
 import { Story, Meta } from "@storybook/html";
 import { BaseTogglePropsType } from "../../utils";
-import ButtonComponent from "./Simple.Button";
-import DivComponent from "./Simple.Div";
-import CheckboxComponent from "./simple.Checkbox";
+import ButtonComponent from "./{{dashCase name}}.button";
+import DivComponent from "./{{dashCase name}}.div";
+import CheckboxComponent from "./{{dashCase name}}.checkbox";
 
 export default {
-  title: "Simple",
+  title: "{{titleCase name}}",
   argTypes: {},
 } as Meta<BaseTogglePropsType>;
 
