--- a/packages/core/src/global/shared.scss
+++ b/packages/core/src/global/shared.scss
@@ -5,8 +5,22 @@
   cursor: pointer;
   @if $checkbox {
     input[type="checkbox"] {
-      display: none;
+      opacity: 0;
     }
+  }
+}
+
+@if $checkbox {
+  .theme-toggle-sr {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    padding: 0;
+    margin: -1px;
+    overflow: hidden;
+    clip: rect(0, 0, 0, 0);
+    white-space: nowrap;
+    border-width: 0;
   }
 }
 
