--- a/packages/core/src/toggles/horizon.scss
+++ b/packages/core/src/toggles/horizon.scss
@@ -6,17 +6,17 @@ $variable: #{getVar(horizon)};
 @include generic(horizon, flip-x);
 
 .theme-toggle__horizon {
-    g {
-        path {
-            transition: transform var(#{$variable}) cubic-bezier(0, 0, .15, 1);
-        }
+  g {
+    path {
+      transition: transform var(#{$variable}) cubic-bezier(0, 0, 0.15, 1);
     }
+  }
 }
 
 @include toggledSelector(horizon) {
-    g {
-        path {
-            transform: translate3d(0, 50%, 0);
-        }
+  g {
+    path {
+      transform: translate3d(0, 50%, 0);
     }
+  }
 }
