--- a/packages/core/src/toggles/inner-moon.scss
+++ b/packages/core/src/toggles/inner-moon.scss
@@ -6,20 +6,21 @@ $variable: #{getVar(inner-moon)};
 @include generic(inner-moon, flip-y);
 
 .theme-toggle__inner-moon {
-    path {
-        transform-origin: center;
-        transition: transform var(#{$variable}) cubic-bezier(0, 0, .15, 1.25);
-    }
-    circle {
-        transition: transform calc(var(#{$variable}) / 1.5) cubic-bezier(0.4, 0, 0.2, 1);
-    }
+  path {
+    transform-origin: center;
+    transition: transform var(#{$variable}) cubic-bezier(0, 0, 0.15, 1.25);
+  }
+  circle {
+    transition: transform calc(var(#{$variable}) / 1.5)
+      cubic-bezier(0.4, 0, 0.2, 1);
+  }
 }
 
 @include toggledSelector(inner-moon) {
-    path {
-        transform: rotate(180deg);
-    }
-    circle {
-        transform: translate3d(15%, 0, 0);
-    }
+  path {
+    transform: rotate(180deg);
+  }
+  circle {
+    transform: translate3d(15%, 0, 0);
+  }
 }
