--- a/packages/core/src/global/shared.scss
+++ b/packages/core/src/global/shared.scss
@@ -4,23 +4,18 @@
   all: unset;
   cursor: pointer;
   @if $checkbox {
-    input[type="checkbox"] {
-      opacity: 0;
+    input[type="checkbox"],
+    .theme-toggle-sr {
+      position: absolute;
+      width: 1px;
+      height: 1px;
+      padding: 0;
+      margin: -1px;
+      overflow: hidden;
+      clip: rect(0, 0, 0, 0);
+      white-space: nowrap;
+      border-width: 0;
     }
-  }
-}
-
-@if $checkbox {
-  .theme-toggle-sr {
-    position: absolute;
-    width: 1px;
-    height: 1px;
-    padding: 0;
-    margin: -1px;
-    overflow: hidden;
-    clip: rect(0, 0, 0, 0);
-    white-space: nowrap;
-    border-width: 0;
   }
 }
 
